# Kenjin

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
docs/: adding-content.md  api-reference.md  architecture.md  demo-questions.md
scripts/: compare_models.py  ingest_all.py  query_cli.py  run_eval.py  scrape_blog.py  stop_servers.py  verify_api.py  verify_pipeline.py
scripts/scraping/: base_scraper.py  scrape_kendo3ka.py  scrape_kendoinfo.py  scrape_kendophilosophy.py  scrape_kenshi247.py  scrape_nanseikan.py
src/kendocenter/: __init__.py  config.py  main.py
src/kendocenter/api/: routes_search.py  routes_terms.py
src/kendocenter/evaluation/: __init__.py  metrics.py  runner.py
src/kendocenter/generation/: claude_cli.py
src/kendocenter/ingestion/: chunker.py  docx_parser.py  embedder.py  ingest_pipeline.py  metadata_loader.py  pdf_parser.py
src/kendocenter/retrieval/: hybrid.py  pipeline.py  prompt_builder.py  reranker.py  retriever.py
src/kendocenter/storage/: database.py  models.py  vector_store.py
src/kendocenter/ui/: app.py
